tests/typing/bad/testfile-nil-3.go
package main

func main() { x := *nil }
